# open-passkey

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROMPT.md  README.md  RESTYLE_PLAN.md  SECURITY.md  SECURITY_AUDIT_PLAN.md  SESSION_PLAN.md  get_production_ready.md  shipyard.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/plans/: attestation-backup-userhandle.md
examples/angular/: angular.json  package.json  proxy.conf.json  server.ts
examples/aspnet/: PasskeyExample.csproj  Program.cs
examples/astro/: astro.config.mjs  package.json
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/axum/static/: index.html
examples/chi/: go.mod  go.sum  main.go
examples/django/: requirements.txt
examples/echo/: go.mod  main.go
examples/express/: package-lock.json  package.json  server.ts
examples/fastapi/: app.py  requirements.txt
examples/fastify/: package.json  server.ts
examples/fiber/: go.mod  go.sum  main.go
examples/flask/: app.py  requirements.txt
examples/gin/: go.mod  main.go
examples/hono/: package.json  server.ts
examples/laravel/: composer.json
examples/nestjs/: package.json
examples/nethttp/: go.mod  main.go
examples/nextjs/: package.json  tsconfig.json
examples/nuxt/: nuxt.config.ts  package.json
examples/php/: composer.json  server.php
examples/rails/: Gemfile
examples/react/: index.html  package.json  tsconfig.json
examples/remix/: package.json  tsconfig.json  vite.config.ts
scripts/: bump.sh  bundle-wordpress.sh  publish.sh  run-examples.sh  sync-versions.sh  test-all.sh
(+121 files in other folders)
