[package]
name = "passkey-axum-example"
version = "0.1.0"
edition = "2021"

[dependencies]
open-passkey-axum = { path = "../../packages/server-axum" }
open-passkey-core = { path = "../../packages/core-rust" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
